Fix layout of webGL games and index page on smaller screens

--- a/content/games/ballmerPeak/webGl/TemplateData/style.css
+++ b/content/games/ballmerPeak/webGl/TemplateData/style.css
@@ -1,5 +1,5 @@
 .webgl-content * {border: 0; margin: 0; padding: 0}
-.webgl-content {position: absolute; top: 0%; left: 0%; width: 100%;}
+.webgl-content {position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 
 .webgl-content .logo, .progress {position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 .webgl-content .logo {background: url('progressLogo.Light.png') no-repeat center / contain; width: 154px; height: 130px;}
@@ -16,3 +16,9 @@
 .webgl-content .footer .webgl-logo {background-image: url('webgl-logo.png'); width: 204px; float: left;}
 .webgl-content .footer .title {margin-right: 10px; float: right;}
 .webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 38px; float: right;}
+
+.title { display: none !important;}
+.gameContainer {
+    height: calc(100vh - 45px);
+    width: calc((100vh - 45px) * (16/9));
+}
